basic messaging works.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
+  firebase_storage: ^11.2.2
+  image_picker: ^0.8.8
+  image_picker_for_web: ^2.1.12
+  cloud_firestore: ^4.8.0
 
 dev_dependencies:
   flutter_test:
